syntax = "proto3";

package lp.v1;

import "google/protobuf/timestamp.proto";

option go_package = "lp.lp.v1;lp1";

service LearningPlatform {
    rpc CreateChannel (CreateChannelRequest) returns (CreateChannelResponse);
    rpc GetChannel (GetChannelRequest) returns (GetChannelResponse);
    rpc GetChannels (GetChannelsRequest) returns (GetChannelsResponse);
    rpc UpdateChannel (UpdateChannelRequest) returns (UpdateChannelResponse);
    rpc DeleteChannel (DeleteChannelRequest) returns (DeleteChannelResponse);

    rpc CreatePlan (CreatePlanRequest) returns (CreatePlanResponse);
    rpc GetPlan (GetPlanRequest) returns (GetPlanResponse);
    rpc GetPlans (GetPlansRequest) returns (GetPlansResponse);
    rpc UpdatePlan (UpdatePlanRequest) returns (UpdatePlanResponse);
    rpc DeletePlan (DeletePlanRequest) returns (DeletePlanResponse);

    rpc CreateLesson (CreateLessonRequest) returns (CreateLessonResponse);
    rpc GetLesson (GetLessonRequest) returns (GetLessonResponse);
    rpc GetLessons (GetLessonsRequest) returns (GetLessonsResponse);
    rpc UpdateLesson (UpdateLessonRequest) returns (UpdateLessonResponse);
    rpc DeleteLesson (DeleteLessonRequest) returns (DeleteLessonResponse);
}

message Channel {
    int64 id = 1; // ID of the channel.
    string name = 2; // Name of the channel.
    string description = 3; // Description of the channel.
    int64 created_by = 4; // User ID who creates the channel.
    int64 last_modified_by = 5; // ID of the user who modified the channel.
    google.protobuf.Timestamp created_at = 6; // Timestamp when the channel was created.
    google.protobuf.Timestamp modified = 7; // Timestamp when the channel was last modified.
}

message ChannelWithPlans {
    int64 id = 1; // ID of the channel.
    string name = 2; // Name of the channel.
    string description = 3; // Description of the channel.
    int64 created_by = 4; // User ID who creates the channel.
    int64 last_modified_by = 5; // ID of the user who modified the channel.
    google.protobuf.Timestamp created_at = 6; // Timestamp when the channel was created.
    google.protobuf.Timestamp modified = 7; // Timestamp when the channel was last modified.
    repeated Plan plans = 8;
}

message CreateChannelRequest {
    string name = 1; // Name of the channel.
    string description = 2; // Description of the channel.
    int64 created_by = 3; // User ID who creates the channel.
    int64 last_modified_by = 4; // ID of the user who modified the channel.
}

message CreateChannelResponse {
    int64 id = 1; // ID of the new channel.
}

message GetChannelRequest {
    int64 id = 1; // ID of the channel to retrieve.
}

message GetChannelResponse {
    ChannelWithPlans channel = 1; // The retrieved channel.
}

message GetChannelsRequest {
    int64 limit = 1; // Limit for pagination.
    int64 offset = 2; // Offset for pagination.
}

message GetChannelsResponse {
    repeated Channel channels = 1; // The retrieved list of channels.
}

message UpdateChannelRequest {
    int64 id = 1; // ID of the channel.
    optional string name = 2; // Name of the channel.
    optional string description = 3; // Description of the channel.
    int64 last_modified_by = 4; // ID of the user who modified the channel.
}

message UpdateChannelResponse {
    int64 id = 1; // ID of the updated channel .
}

message DeleteChannelRequest {
    int64 id = 1; // ID of the channel to delete.
}

message DeleteChannelResponse {
    bool success = 1; // Indicates if the channel was successfully deleted.
}

message Plan {
    int64 id = 1; // ID of the plan.
    string name = 2; // Name of the plan.
    string description = 3; // Description of the plan.
    int64 created_by = 4; // User ID who creates the plan.
    int64 last_modified_by = 5; // ID of the user who modified the plan.
    bool is_published = 6; //
    bool public = 7; // 
    google.protobuf.Timestamp created_at = 8; // Timestamp when the plan was created.
    google.protobuf.Timestamp modified = 9; // Timestamp when the plan was last modified.
}

message CreatePlanRequest {
    string name = 1; // Name of the plan.
    string description = 2; // Description of the plan.
    int64 created_by = 3; // User ID who creates the plan.
    int64 last_modified_by = 4; // ID of the user who modified the plan.
    int64 channel_id = 5; // Ð¡hannel ID within which the plan is created.
}

message CreatePlanResponse {
    int64 id = 1; // ID of the new plan.
}

message GetPlanRequest {
    int64 id = 1; // ID of the plan to retrieve.
}

message GetPlanResponse {
    Plan plan = 1; // The retrieved plan.
}

message GetPlansRequest {
    int64 channel_id = 1; // ID of the channel that includes the plans.
    int64 limit = 2; // Limit for pagination.
    int64 offset = 3; // Offset for pagination.
}

message GetPlansResponse {
    repeated Plan plans = 1; // The retrieved list of plan.
}

message UpdatePlanRequest {
    int64 id = 1; // ID of the plan.
    optional string name = 2; // Name of the plan.
    optional string description = 3; // Description of the plan.
    int64 last_modified_by = 4; // ID of the user who modified the plan.
    optional bool is_published = 5; // Has the plan been published.
    optional bool public = 6; // Is the plan public.
}

message UpdatePlanResponse {
    int64 id = 1; // ID of the updated plan.
}

message DeletePlanRequest {
    int64 id = 1; // ID of the plan to delete.
}

message DeletePlanResponse {
    bool success = 1; // Indicates if the plan was successfully deleted.
}

message Lesson {
    int64 id = 1; // ID of the lesson.
    string name = 2; // Name of the lesson.
    int64 created_by = 3; // User ID who creates the lesson.
    int64 last_modified_by = 4; // ID of the user who modified the lesson.
    google.protobuf.Timestamp created_at = 5; // Timestamp when the lesson was created.
    google.protobuf.Timestamp modified = 6; // Timestamp when the lesson was last modified.
}

message CreateLessonRequest {
    string name = 1; // Name of the lesson.
    string description = 2; // Description of the lesson.
    int64 created_by = 3; // User ID who creates the lesson.
    int64 last_modified_by = 4; // ID of the user who modified the lesson.
    int64 plan_id = 5; // Plan ID within which the lesson is created.
}

message CreateLessonResponse {
    int64 id = 1; // ID of the new lesson.
}

message GetLessonRequest {
    int64 id = 1; // ID of the lesson to retrieve.
}

message GetLessonResponse {
    Lesson lesson = 1; // The retrieved lesson.
}

message GetLessonsRequest {
    int64 plan_id = 1; // ID of the plan that includes the lesson.
    int64 limit = 2; // Limit for pagination.
    int64 offset = 3; // Offset for pagination.
}

message GetLessonsResponse {
    repeated Lesson lessons = 1; // The retrieved list of lesson.
}

message UpdateLessonRequest {
    int64 id = 1; // ID of the lesson.
    optional string name = 2; // Name of the lesson.
    int64 last_modified_by = 3; // ID of the user who modified the lesson.
}

message UpdateLessonResponse {
    int64 id = 1; // ID of the updated lesson.
}

message DeleteLessonRequest {
    int64 id = 1; // ID of the lesson to delete.
}

message DeleteLessonResponse {
    bool success = 1; // Indicates if the lesson was successfully deleted.
}